# ModernExternalProject.cmake

./: .clangd  .gitignore  CMakeLists.txt  LICENSE
.devcontainer/: Dockerfile  devcontainer.json
src/: ModernExternalProject.cmake
test/: CMakeLists.txt  test_boost.cpp  test_fmt.cpp
